<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Athentification">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="50sp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titledesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="40sp"
        android:fontFamily="@font/roboto"
        android:text="@string/descriptiontext"
        android:textColor="@color/titlecolor"
        android:textSize="20sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />


    <EditText
            android:id="@+id/inputUsername"
        android:layout_width="300dp"
        android:layout_height="50sp"
        android:layout_marginTop="35dp"
        android:background="@drawable/costum_input"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10sp"
        android:hint="Username"
        android:inputType="textEmailAddress"
        android:paddingLeft="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titledesc" />


    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="300dp"
        android:layout_height="50sp"
        android:layout_marginTop="17dp"
        android:background="@drawable/costum_input"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10sp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingLeft="15sp"
        app:passwordToggleEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername" />

    <TextView
        android:id="@+id/forgetmdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/robotomedium"
        android:text="@string/forgetmdp"
        android:textColor="@color/subtitle"
        android:textSize="13sp"
        android:layout_marginHorizontal="30dp"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <TextView
        android:id="@+id/titledesc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="15sp"
        android:fontFamily="@font/robotomedium"
        android:text="@string/titledesc2"
        android:textColor="@color/titlecolor"
        android:textSize="11sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetmdp" />

    <androidx.cardview.widget.CardView
        android:layout_width="140sp"
        android:layout_height="50sp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="27sp"
        app:cardCornerRadius="8dp"
        app:cardElevation="1sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titledesc2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_gravity="center_horizontal">


            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/facebook"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Facebook"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView1"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/google"
        android:layout_width="140sp"
        android:layout_height="50sp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="27sp"
        app:cardCornerRadius="8dp"
        app:cardElevation="1sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titledesc2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_gravity="center_horizontal">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/google"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Google"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="17sp"
        android:background="@drawable/button"
        android:text="Login"
        app:backgroundTint="@null"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google" />
    <Button
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/robotomedium"
        android:text="@string/SignUp"
        android:textColor="@color/subtitle"
        android:textSize="13sp"
        android:layout_marginHorizontal="60dp"
        android:backgroundTint="@color/transparent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>